# language-rs

./: Cargo.toml  README.md
Wikipedia/List_of_ISO_639-1_codes/: README.md
language-code/: Cargo.toml  README.md
language-code/src/: error.rs  iso639_1.rs  lib.rs
language-code/tests/: List_of_ISO_639-1_codes  macro_language_code.rs  macro_language_tag.rs
language-code/tests/List_of_ISO_639-1_codes/: list.csv
